src-ken&y/objects/Purchase_Order_Line__c.object
<CustomObject>
    <customHelpPage>HelpPurchaseOrders</customHelpPage>
    <description>Line items on a purchase order document</description>
    <fields>
        <fullName>Accounting_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounting Default.</description>
        <label>Accounting Segment</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Credited__c</fullName>
        <label>Amount Credited</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Matched__c</fullName>
        <defaultValue>0</defaultValue>
        <description>will capture the invoiced amount (SIL.Invoice Quantity * SIL.Invoice Price) where the invoice has been approved</description>
        <label>Amount Matched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Foreign Key: used to link lines to Company record</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which contract line was the price details pulled from</description>
        <label>Contract Line</label>
        <referenceTo>Contract_Line__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this was a contracted or off-contract purchase</description>
        <inlineHelpText>A checkmark indicates that this was a contracted purchase. If this field is clear, then the purchase was off-contract.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Purchase_Order__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date this PO line item was added</description>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>Date this line item was closed or cancelled</description>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Changed__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date this line item was last changed</description>
        <label>Date Last Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_from_Promised__c</fullName>
        <formula>Date_Closed__c - Promise_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Promised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <label>Delivery Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Location doesn&apos;t belong to facility</errorMessage>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Facility__r.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Delivery_Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Delivery Location)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Add description for non inventoried items;  the description will be added automatically for inventoried items. Use the notes field for other information about this detail line</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <label>Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Purchase_Order__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field designates when an order is made for indirect goods, services, assets, or expenses.  This should be set by the system.</description>
        <label>Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Matching__c</fullName>
        <description>2 way -  matches SI quantity to PO quantity, 3 way -  matches SI quantity to RL quantities for PO</description>
        <label>Invoice Matching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Three Way</fullName>
                </value>
                <value>
                    <fullName>Two Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <description>indicates if the line is available for invoicing</description>
        <formula>IF( (Order_Quantity__c + ( Order_Quantity__c * IF( ISNULL(Purchase_Order__r.Quantity_Tolerance_Over__c),0,Purchase_Order__r.Quantity_Tolerance_Over__c)))  &lt;=  Quantity_Matched__c , &apos;Closed for Invoicing&apos;, &apos;Open for Invoicing&apos;)</formula>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Cross_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The record that defines the relationship between your internal item ID and the supplier&apos;s ID, if applicable.</inlineHelpText>
        <label>Item Cross Reference</label>
        <referenceTo>Item_Cross_Reference__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Specification</label>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item being purchased</description>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Item is not active, or company does not match</errorMessage>
            <filterItems>
                <field>Item__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>Item__c.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>PurchaseOrder Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Promise_Date__c</fullName>
        <description>Latest promise date by the vendor for this item</description>
        <label>Latest Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Value__c</fullName>
        <description>Order Quantity on this line x quoted unit Price</description>
        <formula>ROUND((Order_Quantity__c * Unit_Price__c), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Line number on the purchase order</description>
        <label>Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Plan__c</fullName>
        <description>MRP Plan reference</description>
        <label>MRP Plan</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturers_Part__c</fullName>
        <formula>Item_Cross_Reference__r.Cross_Reference_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer&apos;s Part</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Tracking</label>
        <referenceTo>Material_Tracking__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <description>Need date from MRP if this is an MRP scheduled Item</description>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operation_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Tracking</label>
        <referenceTo>Operation_Tracking__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <description>Quantity of items ordered on this line</description>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overage_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage of overage allowed upon receipt:0 to 100% allowed</description>
        <inlineHelpText>Percentage of overage allowed upon receipt for this PO line. Whole numbers only.</inlineHelpText>
        <label>Overage Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overage_Quantity__c</fullName>
        <description>Quantity allowed in access of order quantity</description>
        <formula>Overage_Percentage__c * Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity allowed in excess of ordered quantity for this PO line. Supports up to six decimal places.</inlineHelpText>
        <label>Overage Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Packaging UOM)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Promise_Date__c</fullName>
        <description>Supplier&apos;s original promise date</description>
        <label>Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <description>The number of the parent PO for this line, used for uploading</description>
        <label>Purchase Order Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <description>Purchase order number</description>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchase unit of measure; if different from stocking UOM, you must enter a conversion factor in the appropriate field (default is units of measure are the same)</description>
        <label>Purchase UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Putaway_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location at which the item is going to be putaway to on the Receiving screen. Hidden field to be used only on the receiving screen.</description>
        <label>Putaway Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Putaway Location)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Credited__c</fullName>
        <defaultValue>0.000000</defaultValue>
        <label>Quantity Credited</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Matched__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores the total quantity of all validated supplier invoices (status = Approved) matched to the po line.</description>
        <label>Quantity Matched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total quantity received on this purchase order</description>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned_to_Supplier__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity returned to supplier for replacement</description>
        <label>Quantity Returned for Replacement</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned_to_Supplier_for_Credit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity returned to supplier for credit only. This amount is subtracted from quantity still due.</description>
        <inlineHelpText>Quantity returned to supplier for credit only. This amount is subtracted from quantity still due.</inlineHelpText>
        <label>Quantity Returned for Credit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The quantity shipped for this po line. populated  when the ASN is released and fob point is origin</description>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Still_Due__c</fullName>
        <description>Quantity Still Due equals Order Quantity minus Quantity in Received Quantity Returned to Supplier minus Quantity Returned to Supplier for Credit</description>
        <formula>IF(  NOT(ISPICKVAL(Status__c, &apos;Open&apos;))  , 0, 

IF( (Order_Quantity__c - Quantity_Received__c + Quantity_Returned_to_Supplier__c) &lt;=0 , 0 , 

Order_Quantity__c - Quantity_Received__c + Quantity_Returned_to_Supplier__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity Still Due equals (=) Order Quantity minus (-) Quantity Received plus (+) Quantity Returned to Supplier minus (-) Quantity Returned to Supplier for Credit.</inlineHelpText>
        <label>Quantity Still Due</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Stock__c</fullName>
        <label>Quantity To Stock</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remit_To_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The supplier that the payment should be made to.</description>
        <label>Remit To Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Remit to Supplier)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor_Notes__c</fullName>
        <description>Requester Notes holds the information of the item that is not available in the items list of the company.</description>
        <inlineHelpText>Requester Notes holds the information of the item that is not available in the items list of the company.</inlineHelpText>
        <label>Requestor Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requisition_Number__c</fullName>
        <description>Requisition number for Items not planned by MRP</description>
        <label>Requisition Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <description>are the items on this line needed urgently</description>
        <label>Rush Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Amount__c</fullName>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Short_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows the use to short close the PO Line</description>
        <label>Short Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <description>Special notes about this line item</description>
        <label>Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <description>This field gets set by the system and is a read-only for users. The value is true as of the time the field gets set which is during creation time of the PO Line or when the Item gets changed on the PO line.</description>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Select PO status: open, closed, cancelled, blanket planned, blanket released</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stocking_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stocking UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Stocking UOM)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Part__c</fullName>
        <description>Supplier&apos;s part number</description>
        <label>Supplier Part</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the Supplier on the PO Header. Needed for setting the lookup filter for manufacturing cross reference.</description>
        <label>Purchase From Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Purchasing</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppliers_Part_Description__c</fullName>
        <description>Supplier&apos;s part description</description>
        <label>Supplier&apos;s Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <formula>Order_Quantity__c  *  Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goods</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Back To Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quoted unit price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Total Weight UOM</description>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Weight UOM)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Weight of the Item</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order Line</label>
    <nameField>
        <label>Purchase Order Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Order_Qty_less_Qty_Received</fullName>
        <active>true</active>
        <errorConditionFormula>AND(((Order_Quantity__c+Overage_Quantity__c ) &lt;  (Quantity_Received__c -  Quantity_Returned_to_Supplier__c )),  ISCHANGED(Order_Quantity__c) )</errorConditionFormula>
        <errorMessage>Cannot reduce the Purchase Order Quantity less than the Quantity Received</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_edit_order_qty_less_qty_invoiced</fullName>
        <active>true</active>
        <description>Validation rule to throw an error when the order qty goes below the qty invoiced</description>
        <errorConditionFormula>AND (ISCHANGED(Order_Quantity__c) , Order_Quantity__c &lt; ( Quantity_Matched__c ))</errorConditionFormula>
        <errorMessage>Cannot reduce the order quantity less than the quantity invoiced</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_Back_To_Back_POL</fullName>
        <active>true</active>
        <description>Cannot update a back to back Purchase Order Line.</description>
        <errorConditionFormula>ISPICKVAL( Purchase_Order__r.Type__c , &apos;Standard&apos;) &amp;&amp; 
ISPICKVAL(  Type__c , &apos;Back To Back&apos;) &amp;&amp;    

NOT(ISBlank( Sales_Order_Line__c ))   &amp;&amp; 

( 

ISCHANGED( Order_Quantity__c )|| 

ISCHANGED( Unit_Price__c )|| 

ISCHANGED( Need_Date__c )||

ISCHANGED( Delivery_Facility__c )||

ISCHANGED( Delivery_Location__c) 

)</errorConditionFormula>
        <errorMessage>Back To Back Purchase Order Line cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_Drop_Ship_POL</fullName>
        <active>true</active>
        <description>Cannot update a drop ship Purchase Order Line.</description>
        <errorConditionFormula>ISPICKVAL( Purchase_Order__r.Type__c , &apos;Drop Ship&apos;) &amp;&amp;    

NOT(ISBlank( Sales_Order_Line__c ))   &amp;&amp; 

( 

ISCHANGED( Order_Quantity__c )|| 

ISCHANGED( Unit_Price__c )|| 

ISCHANGED( Need_Date__c )||

ISCHANGED( Delivery_Facility__c )||

ISCHANGED( Delivery_Location__c) 

)</errorConditionFormula>
        <errorMessage>Drop Ship Purchase Order Line cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_invoice_matching</fullName>
        <active>true</active>
        <description>Validation rule to prevent changing the invoice matching on an approved purchase order line</description>
        <errorConditionFormula>AND( ISCHANGED( Invoice_Matching__c ) ,Approved__c )</errorConditionFormula>
        <errorMessage>Cannot update invoice matching field on an approved purchase order line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_line_update_validation</fullName>
        <active>true</active>
        <description>Cannot update a closed purchase order line</description>
        <errorConditionFormula>AND( NOT(ISCHANGED( Status__c )), ISPICKVAL(Status__c,&quot;Closed&quot;),NOT(Consigned__c),OR( ISCHANGED( Item__c ),  ISCHANGED( Description__c ) , ISCHANGED( Need_Date__c ),  ISCHANGED( Order_Quantity__c ),  ISCHANGED( Unit_Price__c ) ) )</errorConditionFormula>
        <errorMessage>You cannot update a closed line.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_line_update_validation_header</fullName>
        <active>true</active>
        <description>Check the header status and if it is closed then do not allow updating the line</description>
        <errorConditionFormula>AND( ISPICKVAL(Purchase_Order__r.Status__c,&quot;Closed&quot;),NOT(Consigned__c),OR( ISCHANGED( Item__c ),  ISCHANGED( Description__c ) , ISCHANGED( Need_Date__c ),  ISCHANGED( Order_Quantity__c ),  ISCHANGED( Unit_Price__c ) ) )</errorConditionFormula>
        <errorMessage>Cannot update purchase order line as the Purchase Order is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Matching_for_Non_Inventory_POL</fullName>
        <active>true</active>
        <description>Invoice Matching for Non Inventory Purchase Order Line can only be Two Way.</description>
        <errorConditionFormula>ISPICKVAL( Purchase_Order__r.Type__c , &apos;Drop Ship&apos;) &amp;&amp; Item__r.Non_Inventory__c  = true  &amp;&amp;
NOT(ISPICKVAL(Invoice_Matching__c, &apos;Two Way&apos;))</errorConditionFormula>
        <errorMessage>Invoice Matching for Non Inventory Purchase Order Line can only be Two Way.</errorMessage>
    </validationRules>
</CustomObject>